# Claude-Code-Discord-MCP

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: SETUP_GUIDE.md
src/discord_mcp/: __init__.py  server.py
