[project]
name = "discord-mcp"
version = "0.1.0"
description = "MCP server for Discord forum channel integration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
